samples/_failures_safe/1761468473_4a4693_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be232a71.c: In function ‘main’:
./samples/SAFE/__tmp_be232a71.c:179:5: error: expected declaration or statement at end of input
  179 |     }
      |     ^
